# motorweb

./: .gitignore  README-dataload-schema-evolution-v0.5.1.md  README-deploy-scripts-v0.5.3.md  README-doc-update-v0.4.2.md  README-doc-update-v0.4.4.md  README-doc-update-v0.4.5.md  README-doc-update-v0.4.6.md  README-doc-update-v0.4.7.md  README-doc-update-v0.4.8.md  README-doc-update-v0.4.9.md  README-v0.5.2-full-dataload-package.md  README.md  machine-os-cpu-memory.txt  optional-tools.txt  pycharm-obsidian-postman-tools.txt  python-git-dev-tools.txt
apps/job-application-platform/: .env.example  .gitignore  README.md  docs-data-load.md  pyproject.toml
apps/job-application-platform/app/: config.py  dependencies.py  main.py  models.py
apps/job-application-platform/app/core/: README.md
apps/job-application-platform/app/data/: README.md
apps/job-application-platform/app/repositories/: base.py  csv_job_repo.py  factory.py  job_repo.py  json_job_repo.py  seed.py
apps/job-application-platform/app/routers/: jobs.py  storage.py
apps/job-application-platform/app/services/: job_service.py
apps/job-application-platform/data/: README.md
apps/job-application-platform/data/schemas/: jobs.schema.json  jobs.schema.v1.json  jobs.schema.v2-example.json
apps/job-application-platform/logs/examples/: README.md  local-text-log-example.txt
apps/job-application-platform/scripts/: run-csv.sh  run-json.sh  run-local.sh
apps/job-application-platform/scripts/dataload/: csv_to_jobs_json.py  (+3 more)
apps/job-application-platform/tests/: test_jobs.py  test_repositories.py
(+70 files in other folders)
