[project]
name = "jobapp-py"
version = "0.3.0"
description = "FastAPI JobApp starter with JSON/CSV flat-file storage, prepared for Python 3.13"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
